--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 
       <section id="downloads">
         <span class="inner">
-            <a class="zip"></a><div class="middle"></div><a class="tgz"></a>
+            <a class="zip"></a><a class="tgz"></a>
         <!--
           <a href="https://github.com/pblocz/elp-licencias/zipball/master" class="zip">
               <em>download</em> .ZIP
