changes to title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Elp-licencias by pblocz</title>
+    <title>Libera tu código</title>
   </head>
 
   <body>
@@ -30,7 +30,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Elp-licencias</h1>
+            <h1>Libera tu código</h1>
             <h2></h2>
           </span>
           <span class="left-tail"></span>
